welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:8: error: not found: value -
                                             case (_,ab - 10,_) => return 5
                                                        ^blueTicket:9: error: not found: value -
                                             case (_,_,ab - 10) => return 5
                                                          ^